--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
   <link href="CSS/style.css" rel="stylesheet">
 </head>
 <body>
-
+  <!-- SCRIPTS -->
+  <!-- JQuery -->
+  <script type="text/javascript" src="MDB/js/jquery-3.4.0.min.js"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript" src="MDB/js/popper.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="MDB/js/mdb.min.js"></script>
+  <!-- Custom JavaScript -->
+  <script type="text/javascript" src="JS/main.js"></script>
 </body>
 </html>
