add the MDB grid system

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <link href="CSS/style.css" rel="stylesheet">
 </head>
 <body>
+  <div class="container-fluid">
+    <div class="row">
+
+    </div>
+  </div>
   <!-- SCRIPTS -->
   <!-- JQuery -->
   <script type="text/javascript" src="MDB/js/jquery-3.4.0.min.js"></script>
