--- a/index.html
+++ b/index.html
@@ -17,7 +17,24 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-
+      <div class="col tm-active">
+        <div class="tm-name" id="name-0">
+          Player 1
+        </div>
+      	<div class="tm-score" id="score-0">
+          0
+        </div>
+        <div class="tm-current-box">
+          <div class="tm-label">
+            Current Score
+          </div>
+          <div class="tm-current-score" id="current-0">
+            0
+          </div>
+        </div>
+        <div class="sorry-0" id="sorry-0">
+          Sorry, you rolled 1.
+        </div>
     </div>
   </div>
   <!-- SCRIPTS -->
