add the second  player section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,26 @@
         <div class="sorry-0" id="sorry-0">
           Sorry, you rolled 1.
         </div>
+      </div>
+      <div class="col">
+        <div class="tm-name" id="name-1">
+          Player 2
+        </div>
+        <div class="tm-score" id="score-1">
+          0
+        </div>
+        <div class="tm-current-box">
+          <div class="tm-label">
+            Current Score
+          </div>
+          <div class="tm-current-score" id="current-1">
+            0
+          </div>
+        </div>
+        <div class="sorry-1" id="sorry-1">
+          Sorry, you rolled 1.
+        </div>
+    </div>
     </div>
   </div>
   <!-- SCRIPTS -->
