add buttons and icons

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
           Sorry, you rolled 1.
         </div>
     </div>
+      <button class="btn-new">
+        <i class="far fa-plus-square"></i>Reset Game
+      </button>
+      <button class="btn-roll">
+        <i class="fas fa-dice"></i>Roll dice
+      </button>
+      <button class="btn-hold">
+        <i class="far fa-stop-circle"></i>Hold Game
+      </button>
     </div>
   </div>
   <!-- SCRIPTS -->
