--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <!-- Bootstrap tooltips -->
   <script type="text/javascript" src="MDB/js/popper.min.js"></script>
   <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="MDB/js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="MDB/js/mdb.min.js"></script>
   <!-- Custom JavaScript -->
