--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       <button class="btn-hold">
         <i class="far fa-stop-circle"></i>Hold Game
       </button>
+      <img src="dice-5.png" alt="Dice" class="dice img-fluid" id="dice-1">
     </div>
   </div>
   <!-- SCRIPTS -->
